--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "Hobbyist S2 & S6" # This will show up in places like twitter, link
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 email: "ticom.new.england@gmail.com"
-twitter_username: "TicomCybertek"
+twitter_username: "CybertekGroup"
 github_username: "TicomCybertek"
 #linkedin_username: "linkedinuser"
 #facebook_username: username
